--- a/css/header.css
+++ b/css/header.css
@@ -1,7 +1,10 @@
 header {
     background-color: #600;
-    width:100%;
-    margin: 0;
+
+}
+
+.logo {
+    padding: 10px;
 }
 
 nav {
